--- a/login.html
+++ b/login.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="css/style.css" />
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-        <link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
+        <link rel="icon" type="image/png" href="img/transparent-atom-icon.png"/>
         <link rel="stylesheet" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css">
         <link rel="stylesheet" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css">     
         <link rel="stylesheet" type="text/css" href="vendor/animate/animate.css">	
@@ -32,7 +32,7 @@
                             </div>
                         <div class="wrap-login100">
                             <div class="login100-pic js-tilt" data-tilt>
-                                <img src="images/img-01.png" alt="IMG">
+                                <img src="img/hallo.jpeg" alt="IMG">
                             </div>
             
                             <form class="login100-form validate-form">
